# serde-wincode

./: Cargo.toml  README.md
.github/workflows/: format_check_lint_test.yaml
src/: de.rs  lib.rs  ser.rs
