[dependencies]
serde = { version = "1.0", default-features = false }
thiserror = { version = "2", default-features = false }
wincode = { version = "0.4", default-features = false }

[dev-dependencies]
bincode = "1.3.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
alloc = ["serde/alloc", "wincode/alloc"]
std = ["alloc", "thiserror/std"]

[lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
wildcard_imports = "deny"
print_stdout = "deny"
print_stderr = "deny"

[lints.rust]
let_underscore_drop = "deny"

[package]
authors = ["Ash Manning <10554686+A-Manning@users.noreply.github.com>"]
description = "serde compatibility for wincode, suitable for replacing bincode"
edition = "2024"
name = "serde-wincode"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/A-Manning/serde-wincode"
rust-version = "1.85.0"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
